# MCPserver-agenda

./: .env  README.md  postgres.py  pyproject.toml  test.py
csv files/: appointment_type.csv  appointments.csv  patients.csv
