[project]
name = "mcp-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "faker>=37.3.0",
    "mcp[cli]>=1.9.3",
    "pandas>=2.3.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
]

[tool.uv.workspace]
members = [
    "mcp-postgres",
]
